# BOSS

./: .gitignore  CMakeLists.txt  main.cpp
BOSSlib/simulation/: CMakeLists.txt  _CMakeList.txt
BOSSlib/simulation/cmake/: Config.cmake.in  FindBOSSlib.cmake
BOSSlib/simulation/inc/: generic_process.h  generic_resource.h  simulation.h
BOSSlib/simulation/src/: process.cpp  resource.cpp  simulation.cpp
BOSSlib/simulation/test/: test.cpp
